<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.davidwu.notebook.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:id="@+id/username_textview"
                android:layout_margin="@dimen/text_margin"/>


            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:maxLines="3"
                android:singleLine="false"
                android:layout_below="@id/username_textview"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/password_textview"
                android:layout_margin="@dimen/text_margin"
                android:layout_below="@id/email" />




            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="3"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:singleLine="false"
                android:layout_below="@id/password_textview" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_linearlayout"
                android:layout_below="@id/password"
                android:layout_marginTop="20dp" >
                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:layout_below="@+id/password" />


                <Button
                    android:id="@+id/new_user_sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="11dp"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/email_sign_in_button"
                    android:layout_toEndOf="@id/email_sign_in_button"
                    android:layout_below="@id/password" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/language_choosing"
                android:layout_marginTop="50dp"
                android:layout_below="@id/login_button_linearlayout"
                android:text="@string/language_choosing"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/language_choosing"
                android:id="@+id/language_spinner"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
