<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.davidwu.notebook.WordsActivity"
    tools:showIn="@layout/activity_words">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/word_title"
            android:text="@string/function_words"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/word_edittext"
            android:layout_below="@id/word_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:maxLines="100" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/word_email"
            android:text="@string/send_email"
            android:layout_below="@id/word_edittext"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/word_email_edittext"
            android:layout_below="@id/word_email"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/word_time_button"
            android:text="@string/choose_time"
            android:layout_below="@id/word_email_edittext"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/word_time_textView"
            android:layout_toRightOf="@id/word_time_button"
            android:layout_marginTop="36dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/word_email_edittext"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/word_new_checkbox"
            android:layout_below="@id/word_time_button"
            android:text="@string/new_word"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/word_send_button"
            android:text="@string/send_button"
            android:layout_below="@id/word_new_checkbox"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
