<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_name_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/event_name"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/boldBlack" />

        <TextView
            android:id="@+id/item_content_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name_c"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_toLeftOf="@id/item_days_c"
            android:layout_marginRight="12dp"
            android:minLines="1"
            android:maxLines="2"
            android:text="@string/event_content"
            android:textSize="20sp"
            android:textColor="@color/normalBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_finish_date_c"
            android:layout_below="@+id/item_content_c"
            android:text="@string/event_finishing_time"
            android:textColor="@color/normalBlack"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/item_classification_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_below="@id/item_content_c"
            android:layout_alignBottom="@+id/item_class_image_c"
            android:layout_toLeftOf="@+id/item_class_image_c"
            android:layout_toStartOf="@+id/item_class_image_c"
            android:gravity="center"
            android:text="@string/classs"
            android:textColor="@color/boldBlack"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_days_c"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/days"
            android:gravity="center"
            android:textSize="45sp"
            android:textColor="@color/black"
            android:layout_alignParentRight="true" />

        <ImageView
            android:id="@+id/item_class_image_c"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/item_content_c"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/home"/>


    </RelativeLayout>


</LinearLayout>